deployments/kubernetes/service.yml
#
# Copyright 2015-2019 VMware, Inc. All Rights Reserved.
# Author: Tom Hite (thite@vmware.com)
#
# SPDX-License-Identifier: https://spdx.org/licenses/MIT.html
#

apiVersion: v1
kind: Service
metadata:
  name: go-reminders
  labels:
    app: go-reminders
spec:
  type: NodePort
  selector:
    app: go-reminders
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      nodePort: 30080
  externalTrafficPolicy: Cluster
